// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldWrapper/Label > should render correctly 1`] = `
<DocumentFragment>
  <label
    class="sc-bczSft jJehPQ"
  >
    <span
      class="sc-dkzCjb cGViLk"
      data-rc="BodySmallB"
    >
      Label text
    </span>
  </label>
</DocumentFragment>
`;

exports[`FieldWrapper/Label should render correctly 1`] = `
<DocumentFragment>
  <label
    class="sc-bcXHqe bjGbzT"
  >
    <span
      class="sc-dkrFOg lcwtgS"
      data-rc="BodySmallB"
    >
      Label text
    </span>
  </label>
</DocumentFragment>
`;
